<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="120dp"
    android:background="@drawable/set_game_background">
    <LinearLayout
        android:id="@+id/ling"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_text"
            android:textSize="17sp"
            android:textColor="#000"/>
        <RadioGroup
            android:id="@+id/radioSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/normalSet"
            android:orientation="horizontal">
            <RadioButton 
                android:id="@+id/normalSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_text"
                android:textColor="#000"/>
            <RadioButton 
                android:id="@+id/randomSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_text"
                android:textColor="#000"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ling"
        android:text="@string/on_off_text"
        android:textColor="#000"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/on_offx"
        android:contentDescription="@null" />

</RelativeLayout>